Require Jenkins 2.479.1 and Jakarta EE 9 (#324)